<resources>
    <string name="app_name">Pogoda</string>
    <string name="no_connection">Brak połączenia</string>
    <string name="data_history">Dane historyczne</string>
    <string name="data_current">Dane bieżące</string>
    <string name="choose_city">Wybierz miasto</string>
    <string name="choose_date">Ustaw datę</string>
    <string name="show">Pokaż</string>
    <string name="ok">Wybierz</string>
    <string name="cancel">Anuluj</string>
    <string name="d1">pn</string>
    <string name="d2">wt</string>
    <string name="d3">śr</string>
    <string name="d4">cz</string>
    <string name="d5">pt</string>
    <string name="d6">so</string>
    <string name="d7">nd</string>

    <string name="celcius">\u00B0C</string>
    <string name="degree">\u00B0</string>
    <string name="perc">%</string>
    <string name="ms"> m/s</string>
    <string name="hpa"> hPa</string>
    <string name="unk">-</string>

    <string-array name="days">
        <item>@string/d7</item>
        <item>@string/d1</item>
        <item>@string/d2</item>
        <item>@string/d3</item>
        <item>@string/d4</item>
        <item>@string/d5</item>
        <item>@string/d6</item>
    </string-array>
    <string name="title_activity_widget_dialog">WidgetDialog</string>

    <string name="temp">Temperatura</string>
    <string name="temp_max">Temp. max:</string>
    <string name="temp_min">Temp. min:</string>
    <string name="pressure">Ciśnienie:</string>
    <string name="humidity">Wilgotność:</string>
    <string name="wind">Wiatr:</string>

</resources>
