<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:id="@+id/temp_min_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/temp_min"/>

    <TextView
        android:id="@+id/temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/temp_min_label"
        android:text="@string/unk"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/temp_max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_min_label"
        android:padding="4dp"
        android:text="@string/temp_max"/>

    <TextView
        android:id="@+id/temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_min_label"
        android:layout_toEndOf="@id/temp_max_label"
        android:text="@string/unk"
        android:padding="4dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/wind_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/wind"/>

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/wind_label"
            android:text="@string/unk"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wind_label"
            android:padding="4dp"
            android:text="@string/pressure"/>

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wind_label"
            android:layout_toEndOf="@id/pressure_label"
            android:text="@string/unk"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pressure_label"
            android:padding="4dp"
            android:text="@string/humidity"/>

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pressure_label"
            android:layout_toEndOf="@id/humidity_label"
            android:text="@string/unk"
            android:padding="4dp"/>

    </RelativeLayout>
</RelativeLayout>